# DocDevAI-v3.0.0

./: .codacy.yml  .coverage  .devdocai.example.yml  .devdocai.yml  .dockerignore  .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .pytest_core.out  .pytest_unit.out  .pytest_unit_final.out  .pytest_unit_full.out  .pytest_unit_full2.out  .pytest_unit_full3.out  .pytest_unit_full4.out  .pytest_unit_full5.out  .pytest_unit_full6.out  .secrets.baseline  .vulture_whitelist.py  =3.8.0  AGENTS.md  API_ENDPOINTS_SUMMARY.md  API_FIX_SUMMARY.md  API_JWT_SOLUTION.md  CHANGELOG.md  CI_CD_ROOT_CAUSE_ANALYSIS.md  CI_CD_VALIDATION_REPORT.md  CLAUDE.md  CLEANUP_REPORT.md  CONTRIBUTING.md  DESIGN-SYSTEM.md  Documentation_for__workspaces_DocDevAI_v3_0_0__Burger_Haven_Website___User_Stories_md.md  ENHANCED_PII_FRAMEWORK_SUMMARY.md  FINAL_SYSTEM_STATUS.md  FRONTEND_PLAN.md  IMPLEMENTATION_READINESS_REPORT_V3_6_0.md  INSTALLATION.md  (+121 more)
.devcontainer/: devcontainer-with-tools.json  devcontainer.json  install-gemini.sh  setup.sh
.gemini/: settings.json
.github/: dependabot.yml  quality-gates.yml
DevDocAI-templete-examples/: Product Requirements Document Creation.md  Project Plan WBS Creation.md  Software Architecture Documentation Creation.md  Software README.md Generator.md  Software Requirements Specification Creation.md  architecture-blueprint-revision-example.md  architecture-blueprint-update-gemini-example.md  architecture-design-review-example.md  architecture-performance-review-example.md  architecute-blueprint-revision-security-example.md  design-deview-example.md  document-revision-compliance-example.md  gemini-architecture-bueprint-update-example.md  revise-performance-review-example.md  revise-security-review-example.md  security-review-example.md  software-requirements-specification-update.md  srs-compliance-review-example.md  srs-document-revision-compliance-example.md  technical-Requirements-example.md  technical-design-example.md
acceptance-tests/: README.md  SYSTEM_INTEGRATION_PLAN.md  VALIDATION_RESULTS.md  package-lock.json  package.json
api-bridge/: main.py  main.py.bak  main_backup.py  main_fixed.py  requirements.txt  simple_main.py
benchmark_results/: m004_generator_20250907_060310.json  m004_generator_20250907_060416.json  m004_generator_20250907_060434.json  m004_generator_20250907_060454.json  m004_generator_20250907_060912.json
claudedocs/: CLEANUP_SUMMARY_2025-08-29.md  M003_IMPLEMENTATION_SUMMARY.md  M004_PASS1_SUMMARY.md  M004_PASS2_PERFORMANCE_SUMMARY.md  PROJECT_COMPLETION_CELEBRATION.md  REFACTORING_PLAN.md  REFACTORING_RESULTS.md  m008_integration_test_report.md  manual_testing_checklist.md
comprehensive_validation_results/: comprehensive_validation.json  comprehensive_validation.md
devdocai/: __init__.py  cli.py  main.py
devdocai-backup-20250907_145701/: __init__.py
devdocai-doc-suit/: BUILDING_GUIDE.md  DESIGN-devdocai-api-documentation.md  DESIGN-devdocai-build-instructions.md  DESIGN-devdocai-maintenance-plan.md  DESIGN-devdocai-srs.md  DESIGN-devdocai-test-plan.md  DESIGN-devdocai-user-docs.md  DESIGN-devdocsai-architecture.md  DESIGN-devdocsai-scmp.md  DESIGN-devdocsai-traceability-matrix.md  DESIGN_DECISIONS.md  TEMPLATE-future-release-notes.md
devdocai-frontend/: .eslintrc.js  IMPLEMENTATION_GUIDE.md  README.md  index.html  next.config.ts  package-lock.json  package.json  start-dev.sh  tailwind.config.js  vite.config.ts
devdocai-frontend-archive-prototype/: .bundlesizerc  .prettierignore  .prettierrc  ARCHITECTURE.md  ARCHIVE_README.md  DASHBOARD_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  tsconfig.json  vite.config.js
docs/: CLEANUP_SUMMARY_2025-08-31.md  INFRASTRUCTURE-ASSESSMENT.md  M001-COMPLETE-SUMMARY.md  M001-IMPLEMENTATION-ROADMAP.md  M001-M006_Integration_Analysis.md  M001-PASS1-SUMMARY.md  M001-PASS3-SECURITY-SUMMARY.md  M002-security-pass-complete.md  M003_PERFORMANCE_OPTIMIZATION_REPORT.md  M003_THREAT_MODEL.md  M004_PASS1_IMPLEMENTATION_SUMMARY.md  M004_PASS2_PERFORMANCE_SUMMARY.md  M005-Performance-Optimization-Summary.md  M005_SECURITY_REPORT.md  M006_PASS2_PERFORMANCE_SUMMARY.md  M006_REFACTORING_REPORT.md  M006_SECURITY_AUDIT.md  M007_PASS4_SUMMARY.md  M007_SECURITY_HARDENING.md  M009_PERFORMANCE_IMPROVEMENTS.md  M010_PASS1_IMPLEMENTATION_SUMMARY.md  M010_Pass2_Performance_Report.md  M010_REAL_WORLD_VERIFICATION_REPORT.md  M011-Pass2-Performance-Summary.md  M011-Pass3-Security-Summary.md  M011-Pass4-Refactoring-Summary.md  M011-UX-Delight-Enhancement-Summary.md  M012-CLI-Complete-Summary.md  M013-VSCode-Extension-Pass1-Summary.md  MODULE_1_PASS_5_REPORT.md  Module1-Security-Hardening.md  PASS3_SECURITY_SUMMARY.md  POST_REFACTORING_PERFORMANCE_ANALYSIS.md  PRODUCTION_VALIDATION_REPORT.md  PROJECT_COMPLETE_2025-09-02.md  README.md  REPOSITORY_CLEANUP_REPORT.md  SECURITY_AUDIT_REPORT.md  SECURITY_VERIFICATION_REPORT.md  TESTING_COMPLETE_2025-09-03.md  (+11 more)
docs-archive-backend-reports/: FINAL_COMPLETION_SUMMARY.md  M001-COMPLETE-SUMMARY.md  M001-IMPLEMENTATION-ROADMAP.md  M001-PASS1-SUMMARY.md  M001-PASS3-SECURITY-SUMMARY.md  M010_PASS1_IMPLEMENTATION_SUMMARY.md  PASS3_SECURITY_SUMMARY.md  README.md  documentation-map.md  m008-implementation-summary.md
examples/: batch_operations_demo.py  batch_performance_demo.py  batch_refactored_demo.py  batch_security_demo.py
frontend/: .env.example  README.md  debug-imports.js  index.html  package-lock.json  package.json  playwright.config.ts  test-console.js  test-frontend.html  test-frontend.js  test-import.js  test_browser_console.js  test_final_vue_app.js  test_frontend.py  test_imports.js  test_vue_5173.js  test_vue_app.js  tsconfig.app.json
generated_documents/: BurgerHaven_README_20250912_025959.md  README_20250912_024516.md
public/: dashboard.html  index.html  test-status.html  test.html
reports/: M011-performance.md
root-docs/: AGENTS.md  NEXT_M013.md  RIS-DEVELOPMENT-METHODOLOGY.md  (+1 more)
(+1286 files in other folders)
